Part4_Kubernetes/Chapter03/Ch03_03-ingress-alb/k8s-manifests/test-deployment-game.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2048
  namespace: test-ingress-alb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: alexwhen/docker-2048
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  namespace: test-ingress-alb
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
